--- a/RepositoryParser/RepositoryParser/View/AnalysisWindowView.xaml
+++ b/RepositoryParser/RepositoryParser/View/AnalysisWindowView.xaml
@@ -17,6 +17,7 @@
     <Window.Resources>
         <conventers:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
         <conventers:DateFormat x:Key="DateFormat"/>
+        <conventers:StringToImageConventer x:Key="StringToImageConventer"/>
     </Window.Resources>
 
     <Grid>
@@ -182,7 +183,7 @@
                 <RowDefinition Height="25"/>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="25"/>
-                <RowDefinition Height="*"/>
+                <RowDefinition Height="0.3*"/>
                 <RowDefinition Height="10"/>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="10"/>
@@ -232,8 +233,11 @@
                       VerticalAlignment="Top"
                       HorizontalAlignment="Stretch"
                       />
-            <Image Grid.Row="5"/>
-            <Image Grid.Row="5"/>
+            <Image Grid.Row="5" 
+                   Source="{Binding RepoType, Converter={StaticResource StringToImageConventer}}"
+                   HorizontalAlignment="Center"
+                   VerticalAlignment="Top"
+                   />
         </Grid>
 
         <Grid x:Name="RepositoryGrid" Grid.Row="2" Grid.Column="3" Margin="2,5">
