--- a/RepositoryParser/RepositoryParser/View/MainWindow.xaml
+++ b/RepositoryParser/RepositoryParser/View/MainWindow.xaml
@@ -78,6 +78,7 @@
                     Foreground="{StaticResource Grey}"
                     Background="{StaticResource Graphite}"
                     Padding="4"
+                    FontWeight="Light"
                     />
         </StackPanel>
 
@@ -89,7 +90,7 @@
             
         <StackPanel Grid.Row="0" Grid.Column="0">
             <TextBlock Text="{x:Static resw:Resources.PickRepositoryType}" HorizontalAlignment="Center" FontSize="16"></TextBlock>
-            <Border BorderBrush="{StaticResource MyGreen}" BorderThickness="0,2">
+            <Border BorderBrush="{StaticResource MyGreen}" BorderThickness="0,1">
                 <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Orientation="Horizontal" Margin="2">
                     <Button Margin="4,0" VerticalAlignment="Center" Background="Transparent" BorderThickness="0" MinWidth="90" Command="{Binding PickGitRepositoryCommand}">
                         <StackPanel Orientation="Horizontal">
@@ -192,11 +193,13 @@
                     Height="50" 
                     VerticalAlignment="Top" 
                     Command="{Binding GoToPageAnalysisCommand}" 
-                    Background="{StaticResource MyGreen}" 
+                    Background="{StaticResource Graphite}"
+                    Foreground="{StaticResource Grey}"
+                    FontWeight="Light"
                     Margin="0,0,0,5">
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="{Binding ElementName=GoToAnalisysBtn, Path=ActualWidth}" >
-                    <Image Source="../Assets/Icons/Combo Chart Filled-50.png" Width="24" Margin="10,0,10,0"/>
-                    <TextBlock Text="{x:Static resw:Resources.AnalysisButton}" VerticalAlignment="Bottom"/>
+                    <Image Source="../Assets/Icons/Analysis_grey.png" Width="24" Margin="10,0,10,0"/>
+                    <TextBlock Text="{x:Static resw:Resources.AnalysisButton}" VerticalAlignment="Center"/>
                 </StackPanel>
             </Button>
 
@@ -206,24 +209,28 @@
             <Button x:Name="ClearDataBase" 
                     Height="50" 
                     VerticalAlignment="Top" 
-                    Background="{StaticResource MyGreen}"  
+                    FontWeight="Light"
+                    Background="{StaticResource Graphite}"
+                    Foreground="{StaticResource Grey}"
                     Command="{Binding AsyncClearDBCommand}" 
                     Margin="0,0,0,5">
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="{Binding ElementName=ClearDataBase, Path=ActualWidth}" >
-                    <Image Source="../Assets/Icons/Delete-64.png" Width="24" Margin="10,0,10,0"/>
+                    <Image Source="../Assets/Icons/Delete_grey.png" Width="24" Margin="10,0,10,0"/>
                     <TextBlock Text="{x:Static resw:Resources.ClearDBButton}" VerticalAlignment="Center"/>
                 </StackPanel>
             </Button>
             <Button x:Name="RefreshBtn" 
                     Height="50" 
                     VerticalAlignment="Top"
-                    Background="{StaticResource MyGreen}"  
+                    FontWeight="Light"
+                    Background="{StaticResource Graphite}"
+                    Foreground="{StaticResource Grey}"
                     Command="{Binding RefreshCommand}" 
                     Margin="0,0,0,5"
                     Padding="0"
                     >
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="{Binding ElementName=RefreshBtn, Path=ActualWidth}" >
-                        <Image Source="../Assets/Icons/Refresh-64.png" Width="24" Margin="10,0,10,0"/>
+                        <Image Source="../Assets/Icons/Refresh_grey.png" Width="24" Margin="10,0,10,0"/>
                         <TextBlock Text="{x:Static resw:Resources.RefreshButton}" VerticalAlignment="Center"/>
                     </StackPanel>
             </Button>
@@ -231,11 +238,13 @@
             <Button x:Name="Save"
                     Height="50" 
                     VerticalAlignment="Bottom" 
-                    Background="{StaticResource MyGreen}"  
+                    Background="{StaticResource Graphite}"
+                    Foreground="{StaticResource Grey}" 
                     Command="{Binding ExportFileCommand}"
+                    FontWeight="Light"
                     Margin="0,0,0,5">
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="{Binding ElementName=Save, Path=ActualWidth}" >
-                    <Image Source="../Assets/Icons/CSV Filled-50.png" Width="24" Margin="10,0,10,0"/>
+                    <Image Source="../Assets/Icons/Export_grey.png" Width="24" Margin="10,0,10,0"/>
                     <TextBlock Text="{x:Static resw:Resources.ExportToFileButton}" VerticalAlignment="Center"/>
                 </StackPanel>
             </Button>
