--- a/RepositoryParser/RepositoryParser/View/AnalysisWindowView.xaml
+++ b/RepositoryParser/RepositoryParser/View/AnalysisWindowView.xaml
@@ -291,7 +291,7 @@
 
         <StackPanel Grid.Row="1" Grid.Column="4" Grid.RowSpan="2" Margin="1,5,1,0">
             <Button Height="50" 
-                    Command="{Binding}" 
+                    Command="{Binding ClearFiltersCommand}" 
                     Margin="0,0,0,5" 
                     Background="{StaticResource Graphite}"
                     Foreground="{StaticResource Grey}"
