--- a/RepositoryParser/RepositoryParser/View/DifferenceWindowView.xaml
+++ b/RepositoryParser/RepositoryParser/View/DifferenceWindowView.xaml
@@ -65,10 +65,20 @@
                 <ListView ItemsSource="{Binding CommitsCollection}" SelectedItem="{Binding SelectedItem, Mode=TwoWay}">
                     <ListView.View>
                         <GridView>
-                            <GridViewColumn Width="40" DisplayMemberBinding="{Binding Key}" Header="{x:Static resw:Resources.CommitsList_ID}">
+                            <GridViewColumn Width="40" DisplayMemberBinding="{Binding Key}">
+                                <GridViewColumnHeader HorizontalAlignment="Stretch"
+                                                      Content="{x:Static resw:Resources.CommitsList_ID}"
+                                                      Background="{StaticResource MyGreen}"
+                                                      >
+                                </GridViewColumnHeader>
                             </GridViewColumn>
 
-                            <GridViewColumn Width="auto"  DisplayMemberBinding="{Binding Value}" Header="{x:Static resw:Resources.CommitsList_Message}">
+                            <GridViewColumn Width="auto"  DisplayMemberBinding="{Binding Value}">
+                                <GridViewColumnHeader HorizontalAlignment="Stretch"
+                                                      Content="{x:Static resw:Resources.CommitsList_Message}"
+                                                      Background="{StaticResource MyGreen}"
+                                                      >
+                                </GridViewColumnHeader>
                             </GridViewColumn>
                         </GridView>
                     </ListView.View>
@@ -79,7 +89,7 @@
         
         <ScrollViewer Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2">
             <StackPanel x:Name="ChangesPanel">
-                <TextBlock Text="{x:Static resw:Resources.Changes}" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+                <TextBlock Text="{x:Static resw:Resources.Changes}" HorizontalAlignment="Center" VerticalAlignment="Top" FontWeight="Light"/>
                 <ListView ItemsSource="{Binding ChangesCollection}" SelectedItem="{Binding ChangeSelectedItem, Mode=TwoWay}" Padding="0" IsEnabled="True">
                     <ListView.View>
                         <GridView>
@@ -102,7 +112,7 @@
             </StackPanel>
         </ScrollViewer>
         
-        <TextBlock Text="{x:Static resw:Resources.ChildCommit}" HorizontalAlignment="Center" Grid.Row="2" Grid.Column="1" Margin="0,10,0,10"/>
+        <TextBlock Text="{x:Static resw:Resources.ChildCommit}" HorizontalAlignment="Center" Grid.Row="2" Grid.Column="1" Margin="0,10,0,10" FontWeight="Light"/>
         <ScrollViewer x:Name="CommitScrollViewer" Grid.Row="2" Grid.Column="1" Margin="0,30,0,10" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" utils:ScrollSynchronizer.ScrollGroup="Group1">
             <StackPanel x:Name="TextAPanel" Grid.Column="1" Grid.Row="2" Margin="5,10,5,10">
                 <ListBox Margin="0,10,0,10" ItemsSource="{Binding ListTextA}" IsEnabled="False">
@@ -118,7 +128,7 @@
             </StackPanel>
         </ScrollViewer>
 
-        <TextBlock Text="{x:Static resw:Resources.ParentCommit}" HorizontalAlignment="Center" Grid.Row="2" Grid.Column="2" Margin="0,10,0,10"/>
+        <TextBlock Text="{x:Static resw:Resources.ParentCommit}" HorizontalAlignment="Center" Grid.Row="2" Grid.Column="2" Margin="0,10,0,10" FontWeight="Light"/>
         <ScrollViewer Grid.Column="2" Grid.Row="2"  Margin="0,30,0,10" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" utils:ScrollSynchronizer.ScrollGroup="Group1">
                 <StackPanel x:Name="TextBPanel" Grid.Column="2" Grid.Row="2" Margin="5,10,5,10">
                     <ListBox Margin="0,10,0,10" ItemsSource="{Binding ListTextB}" IsEnabled="False">
@@ -136,17 +146,22 @@
 
         <StackPanel Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="3" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
             <Button x:Name="GoToChrtButton" 
-                    Height="25" 
+                    Padding="10,0"
                     HorizontalAlignment="Center" 
                     VerticalAlignment="Center"
-                    Content="{x:Static resw:Resources.GoToDifferencesChartButton}" 
                     Background="{StaticResource MyGreen}"
                     Command="{Binding GoToChartOfChangesCommand}"
-                    />
+                    Height="35"
+                    >
+                <StackPanel Orientation="Horizontal" Width="{Binding ElementName=SendBtn, Path=Width}">
+                    <Image Source="../Assets/Icons/Pie_Chart_Black.png" Height="24" Margin="2,0,10,0"/>
+                    <TextBlock Text="{x:Static resw:Resources.GoToDifferencesChartButton}" VerticalAlignment="Center" FontWeight="Light"/>
+                </StackPanel>
+            </Button>
         </StackPanel>
 
 
-        <StatusBar Grid.Row="1" Grid.Column="0" 
+       <!-- <StatusBar Grid.Row="1" Grid.Column="0" 
                    Grid.RowSpan="2"
                    Grid.ColumnSpan="3"
                    Visibility="{Binding ProgressBarVisibility, Converter={StaticResource BoolToVisibilityConverter}, UpdateSourceTrigger=PropertyChanged}" 
@@ -155,7 +170,7 @@
                    HorizontalAlignment="Stretch"
                    VerticalAlignment="Stretch"
                    >
-        </StatusBar>
+        </StatusBar>-->
         <StackPanel Orientation="Horizontal" Grid.Row="0" 
                     Grid.Column="0" Grid.RowSpan="5"
                     Grid.ColumnSpan="3" 
